# LearningComputerGraphics

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
Src/: App.cpp  App.h  BoneInfo.h  Camera.cpp  Camera.h  Image.cpp  Image.h  Scene.cpp  Scene.hpp  SkeletionSubMesh.cpp  SkeletionSubMesh.h  SkeletonMesh.cpp  SkeletonMesh.h  SkyBox.cpp  SkyBox.h  StaticMesh.cpp  StaticMesh.h  StaticSubMesh.cpp  StaticSubMesh.h  StructTransform.h  TextureDescription.cpp  TextureDescription.h  Util.cpp  Util.h  main.cpp
Src/BridgingModels/: BaseVertex.h  BaseVertex.hpp  BridgingModels.h  DirectionLightDepthMapVSHConstants.hpp  ImageVertex.hpp  PBRPSHConstants.hpp  PBRStaticMeshVertex.hpp  PBRVSHConstants.hpp  PhongShadingPSHConstants.cpp  PhongShadingPSHConstants.hpp  PhongShadingVSHConstants.hpp  SkeletonMeshPhongShadingVSHConstants.hpp  SkeletonVertex.hpp  SkyBoxVSHConstants.hpp  Vertex.h  Vertex.hpp
Src/FileManager/: FileManager.cpp  FileManager.h
Src/GLRenderer/: GLDepthMapFrameBuffer.cpp  GLDepthMapFrameBuffer.h  GLDepthMapFrameBufferDebugDrawable.cpp  GLDepthMapFrameBufferDebugDrawable.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLIndexBuffer.h  GLInput.h  GLInputCenter.cpp  GLInputCenter.h  GLPreProcessor.cpp  GLPreProcessor.h  GLRenderer.cpp  GLRenderer.h  GLRunLoop.h  GLShader.cpp  GLShader.h  GLSkeletonMeshDrawable.cpp  GLSkeletonMeshDrawable.h  GLSkeletonSubMeshDrawable.cpp  GLSkeletonSubMeshDrawable.h  GLSkyboxDrawable.cpp  GLSkyboxDrawable.h  GLStaticMeshDrawable.cpp  GLStaticMeshDrawable.h  GLStaticSubMeshDrawable.cpp  GLStaticSubMeshDrawable.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h  GLVertexBufferLayout.cpp  GLVertexBufferLayout.h  GLVertexObject.h
Src/GLRenderer/GLShaders/: GLCube.frag  GLCube.vert  GLDepthMap.vert  GLDepthMapDebug.frag  GLFramebuffers.frag  GLLightingCube.frag  GLLightingCube.vert  GLNanosuit.frag  GLNanosuit.vert  GLSkeletonMesh.frag  GLSkeletonMesh.vert  GLSkybox.frag  GLSkybox.vert  GLStaticMesh.frag  GLStaticMesh.vert  GLSwirlFragmentShader.frag  GLSwirlFragmentShader.vert  GLUnlitStaticMesh.frag  GLUnlitStaticMesh.vert
Src/GUI/: DiligentGUIRenderer.cpp  DiligentGUIRenderer.hpp  GLFWGUISystem.cpp  GLFWGUISystem.hpp  GLFWInputSystem.cpp  GLFWInputSystem.hpp  GUIInterface.h  GUISystem.cpp  GUISystem.h  Keyboard.cpp  Keyboard.hpp  MainView.cpp  MainView.h  NutGUI.cpp  NutGUI.h
Src/GUI/Main/: CameraUIComponent.hpp  DirectionLightDepthMap.hpp  DirectionalLightUIComponent.hpp  MainView.cpp  MainView.hpp  PBRUIComponent.hpp  PointLightUIComponent.hpp  SkeletonMeshUIComponent.hpp  SkyBoxUIComponent.hpp  SpotLightUIComponent.hpp  StaticMeshUIComponent.hpp
Src/ImageIO/: ImageIO.cpp  ImageIO.hpp
Src/Interface/: GLRunLoop.hpp  GUIInterface.hpp  GUIRenderer.hpp  GUISystem.hpp  Input.hpp  ObjectPropertyUIComponent.hpp
Src/LightingSystem/: LightStruct.h  LightingSystem.cpp  LightingSystem.h
Src/Object/: BoneInfo.hpp  Camera.cpp  Camera.hpp  DirectionLightShadowMapInfo.hpp  SkeletonMesh.cpp  SkeletonMesh.hpp  SkyBox.cpp  SkyBox.hpp  StaticMesh.cpp  StaticMesh.hpp  StructTransform.hpp  TextureDescription.cpp  TextureDescription.hpp
Src/Renderer/: DepthMapImage2DPipeline.cpp  DepthMapImage2DPipeline.hpp  DiligentRenderer.cpp  DiligentRenderer.hpp  DirectionLightDepthMapPipeline.cpp  DirectionLightDepthMapPipeline.hpp  IBLBake.cpp  IBLBake.hpp  PBRPipeline.cpp  PBRPipeline.hpp  PBRStaticMeshDrawable.cpp  PBRStaticMeshDrawable.hpp  PhongShadingPSHConstantsResource.cpp  PhongShadingPSHConstantsResource.hpp  SkeletonMeshDrawable.cpp  SkeletonMeshDrawable.hpp  SkeletonMeshPipeline.cpp  SkeletonMeshPipeline.hpp  SkyBoxDrawable.cpp  SkyBoxDrawable.hpp  SkyBoxPipeline.cpp  SkyBoxPipeline.hpp  StaticMeshDrawable.cpp  StaticMeshDrawable.hpp  StaticMeshPipeline.cpp  StaticMeshPipeline.hpp  SubStaticMeshDrawableData.cpp  SubStaticMeshDrawableData.hpp
Src/Renderer/Shader/: DepthMapImage2D.psh  DepthMapImage2D.vsh  DirectionLightDepthMap.psh  DirectionLightDepthMap.vsh  PBR.psh  PBR.vsh  PreFilterEnvironmentCubeMap.hlsl  SkeletonMeshPhongShading.psh  SkeletonMeshPhongShading.vsh  SkyBox.psh  SkyBox.vsh  StaticMeshPhongShading.psh  StaticMeshPhongShading.vsh
Src/Util/: Math.cpp  Math.hpp  Types.hpp  Util.cpp  Util.hpp
